# saunaPi

./: LICENSE  README.md
raspberryPiTempSensor/: .gitignore  CMakeLists.txt  CoolingFilterReadme.txt  Makefile  README.md
raspberryPiTempSensor/resources/: rPiTempVsWallThermTemp.numbers
raspberryPiTempSensor/resources/rPiTempVsWallThermTemp.numbers.sb-6a1298c7-HBWHP9/: rPiTempVsWallThermTemp.numbers
raspberryPiTempSensor/src/main/: SaunaPi.cpp  TempSensor.cpp  TempSensor.h  correlationFile.h  readSensor.cpp  simpleInterpolation.h
raspberryPiTempSensor/src/main/coolingFilter/: CMakeLists.txt  CoolingFilter.cpp  CoolingFilter.h
raspberryPiTempSensor/src/main/saunaPiData/: CMakeLists.txt  SaunaPiData.cpp  SaunaPiData.h  SaunaPiDataFileSystem.cpp  SaunaPiDataFileSystem.h  SaunaPiDataFileSystemInterface.h
raspberryPiTempSensor/src/main/sensor/: CMakeLists.txt  common_dht_read.c  common_dht_read.h  pi_2_dht_read.c  pi_2_dht_read.h  pi_2_mmio.c  pi_2_mmio.h
raspberryPiTempSensor/src/test/CoolingFilterTest/: CMakeLists.txt  CoolingFilterTest.cpp  CoolingFilterTest.h  MainCoolingFilterTest.cpp
raspberryPiTempSensor/src/test/SaunaPiDataTest/: CMakeLists.txt  MainSaunaPiDataTest.cpp  SaunaPiDataStubFileSystem.cpp  SaunaPiDataStubFileSystem.h  saunaPiDataTest.cpp
saunaPiPhone/: Specs.numbers
saunaPiPhone/saunaPiPhone/: ContentView.swift  Info.plist  ReportBlock.swift  ReportBlockContainer.swift  SaunaEnvironment.swift  SettingsControl.swift  SettingsSheet.swift  saunaPiPhoneApp.swift
saunaPiPhone/saunaPiPhone.xcodeproj/: project.pbxproj
saunaPiPhone/saunaPiPhone/saunaPiPhone/: ContentView.swift
saunaPiPhone/saunaPiPhone/saunaPiPhone.xcodeproj/: project.pbxproj
saunaPiPhone/saunaPiPhone/saunaPiPhone.xcodeproj/project.xcworkspace/xcuserdata/dhalonen.xcuserdatad/: UserInterfaceState.xcuserstate
saunaPiPhone/saunaPiPhone/saunaPiPhone.xcodeproj/xcuserdata/dhalonen.xcuserdatad/xcschemes/: xcschememanagement.plist
saunaPiPhone/saunaPiPhoneTests/: saunaPiPhoneTests.swift
saunaPiPhone/saunaPiPhoneUITests/: saunaPiPhoneUITests.swift
saunaPiPhone/urlPlayground.playground/: Contents.swift
saunaPiPlotter/: .gitignore  README.md  callSystem.cpp  createPlotCmd.sh  plot.gpl
webServer/: README.md
